--- a/model_train_huggingface.ipynb
+++ b/model_train_huggingface.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mtlun\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\mtlun\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "from transformers import AutoFeatureExtractor  , AutoModelForImageClassification, TrainingArguments, Trainer, MobileNetV2ForImageClassification\n",
@@ -18,18 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\mtlun\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\transformers\\models\\mobilenet_v2\\feature_extraction_mobilenet_v2.py:28: FutureWarning: The class MobileNetV2FeatureExtractor is deprecated and will be removed in version 5 of Transformers. Please use MobileNetV2ImageProcessor instead.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Load  dataset\n",
     "dataset = load_dataset(\"Piro17/dataset-affecthqnet-fer2013\")\n",
@@ -47,6 +55,14 @@
     "dataset['test'] = test_valid_split['train']\n",
     "dataset['validation'] = test_valid_split['test']\n",
     "\n",
+    "\n",
+    "#Import Model from HuggingFace\n",
+    "model = \"google/mobilenet_v2_1.0_224\"\n",
+    "#model = \"microsoft/resnet-26\"\n",
+    "#model = \"microsoft/resnet-50\"\n",
+    "feature_extractor = AutoFeatureExtractor.from_pretrained(model)\n",
+    "model = MobileNetV2ForImageClassification.from_pretrained(model)\n",
+    "\n",
     "label2id = {\n",
     "    \"angry\": 0,\n",
     "    \"disgust\": 1,\n",
@@ -59,17 +75,28 @@
     "\n",
     "id2label = {v: k for k, v in label2id.items()}\n",
     "\n",
-    "\n",
-    "#Import Model from HuggingFace\n",
-    "model = \"google/mobilenet_v2_1.0_224\"\n",
-    "#model = \"microsoft/resnet-26\"\n",
-    "#model = \"microsoft/resnet-50\"\n",
-    "feature_extractor = AutoFeatureExtractor.from_pretrained(model)\n",
-    "model = MobileNetV2ForImageClassification.from_pretrained(model)\n",
-    "\n",
     "#Fix up the id2label and label2id configurations (Ensure it is consistent with the dataset)\n",
     "model.config.label2id = label2id\n",
     "model.config.id2label = id2label\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model label2id: {'angry': 0, 'disgust': 1, 'fear': 2, 'happy': 3, 'sad': 4, 'surprise': 5, 'neutral': 6}\n",
+      "Model id2label: {0: 'angry', 1: 'disgust', 2: 'fear', 3: 'happy', 4: 'sad', 5: 'surprise', 6: 'neutral'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Model label2id:\", model.config.label2id)\n",
+    "print(\"Model id2label:\", model.config.id2label)"
    ]
   },
   {
