Properly Quantized + Pruned Model

--- a/prune_model.ipynb
+++ b/prune_model.ipynb
@@ -30,6 +30,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Some weights of MobileNetV2ForImageClassification were not initialized from the model checkpoint at ./mobilenet_v2_affectnethq-fer2013_model_fixed_labels and are newly initialized because the shapes did not match:\n",
+      "- classifier.bias: found shape torch.Size([1001]) in the checkpoint and torch.Size([7]) in the model instantiated\n",
+      "- classifier.weight: found shape torch.Size([1001, 1280]) in the checkpoint and torch.Size([7, 1280]) in the model instantiated\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
       "c:\\Users\\lundm\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\transformers\\models\\mobilenet_v2\\feature_extraction_mobilenet_v2.py:28: FutureWarning: The class MobileNetV2FeatureExtractor is deprecated and will be removed in version 5 of Transformers. Please use MobileNetV2ImageProcessor instead.\n",
       "  warnings.warn(\n"
      ]
@@ -37,15 +41,25 @@
    ],
    "source": [
     "# 1. Load the pre-trained model and tokenizer\n",
-    "model_name = './mobilenet_v2_affectnethq-fer2013_model'\n",
+    "model_name = './mobilenet_v2_affectnethq-fer2013_model_fixed_labels'\n",
     "output_dir = \"./mobilenet_v2_affectnethq-fer2013_quantized_pruned\" #Replace with your output directory\n",
-    "model = AutoModelForImageClassification.from_pretrained(model_name)\n",
-    "feature_extractor = AutoFeatureExtractor.from_pretrained(model_name)\n"
+    "original_model = AutoModelForImageClassification.from_pretrained(model_name, num_labels=7, ignore_mismatched_sizes=True)\n",
+    "feature_extractor = AutoFeatureExtractor.from_pretrained(model_name)\n",
+    "\n",
+    "\n",
+    "from torch.quantization import quantize_dynamic\n",
+    "\n",
+    "# Apply dynamic quantization\n",
+    "quantized_model = quantize_dynamic(\n",
+    "    original_model,  # The original model\n",
+    "    {torch.nn.Linear, torch.nn.Conv2d},  # Layers to quantize\n",
+    "    dtype=torch.qint8  # Quantized data type\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,14 +270,14 @@
       "    (pooler): AdaptiveAvgPool2d(output_size=(1, 1))\n",
       "  )\n",
       "  (dropout): Dropout(p=0.2, inplace=True)\n",
-      "  (classifier): Linear(in_features=1280, out_features=1001, bias=True)\n",
+      "  (classifier): DynamicQuantizedLinear(in_features=1280, out_features=7, dtype=torch.qint8, qscheme=torch.per_tensor_affine)\n",
       "))\n"
      ]
     }
    ],
    "source": [
     "models =  []\n",
-    "for model in model.named_modules():\n",
+    "for model in quantized_model.named_modules():\n",
     "    models.append(model)\n",
     "\n",
     "print(models[0])"
@@ -271,20 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "pruning_amount = 0.25  # Adjust as needed\n",
-    "for name, module in model.named_modules():\n",
-    "    if isinstance(module, torch.nn.):\n",
+    "for name, module in quantized_model.named_modules():\n",
+    "    if isinstance(module, torch.nn.Conv2d):\n",
     "        prune.l1_unstructured(module, name='weight', amount=pruning_amount)\n",
     "        prune.remove(module, \"weight\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,13 +307,14 @@
        "['./mobilenet_v2_affectnethq-fer2013_quantized_pruned\\\\preprocessor_config.json']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.save_pretrained(output_dir)\n",
+    "torch.save(quantized_model.state_dict(), f\"{output_dir}/quantized_model.pth\")\n",
+    "original_model.save_pretrained(output_dir)\n",
     "feature_extractor.save_pretrained(output_dir)"
    ]
   }
