--- a/prune_model.ipynb
+++ b/prune_model.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
    "source": [
     "# 1. Load the pre-trained model and tokenizer\n",
     "model_name = './mobilenet_v2_affectnethq-fer2013_model_fixed_labels'\n",
-    "output_dir = \"./mobilenet_v2_affectnethq-fer2013_quantized_pruned\" #Replace with your output directory\n",
+    "output_dir = \"./mobilenet_v2_affectnethq-fer2013_quantized_pruned\"\n",
     "original_model = AutoModelForImageClassification.from_pretrained(model_name, num_labels=7, ignore_mismatched_sizes=True)\n",
     "feature_extractor = AutoFeatureExtractor.from_pretrained(model_name)\n",
     "\n",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
